--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <title>Lyft</title>
   </head>
   <body>
-    
+    <section class="viewLogo">
+      <div class="containerLogo">
+        <div class="logo">
+          <img class="logoFood"src="assets/img/logo-white.png" alt="logo-white">
+        </div>
+      </div>
+    </section>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiibYKHhp0Rh-z1I3qPxABLXI7JFF3lco&callback=initMap" type="text/javascript"></script>
     <script type="text/javascript" src="vendors/jquery/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
