--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row" id="btns-main">
         <button class="col s4  offset-s2 btn-main" type="button" name="button">LOG IN</button>
-        <button class="col s4  btn-main" type="button" name="button" id="sign-up">SIGN UP</button>
+        <button class="col s4  btn-main" type="button" name="button" id="sign-up">SING UP</button>
       </div>
     </section>
     <!--vista ingrese numero de telefono "singup"-->
@@ -36,7 +36,7 @@
         <i class="material-icons col s2" id="return-main">keyboard_arrow_left</i>
         <div class="col-8" >
           <div class="row">
-            <h5 class="col s7" id="title-sgn">Sign Up</h5>
+            <h5 class="col s7" id="title-sgn">Sing Up</h5>
             <br>
             <p class="col s7">Join now for free ride credit</p>
           </div>
@@ -49,10 +49,10 @@
             <dt><a href="#"><span>Country</span></a></dt>
             <dd>
               <ul>
-                <li><a href="#" id="imgcol"><img class="flag" style="width:50px;" src="assets/img/colombia.png" alt="" /><span class="value"></span></a></li>
-                <li><a href="#" id="imgper"><img class="flag" style="width:50px;" src="assets/img/peru.png"><span class="value"></span></a></li>
-                <li><a href="#" id="imgmex"><img class="flag" style="width:50px;" src="assets/img/mexico.jpg"><span class="value"></span></a></li>
-                <li><a href="#" id="imgusa"><img class="flag" style="width:50px;" src="assets/img/usa.png"><span class="value"></span></a></li>
+                <li><a href="#" id="imgcol"><img class="flag" src="assets/img/colombia.png" alt="" /><span class="value"></span></a></li>
+                <li><a href="#" id="imgper"><img class="flag" src="assets/img/peru.png"><span class="value"></span></a></li>
+                <li><a href="#" id="imgmex"><img class="flag" src="assets/img/mexico.jpg"><span class="value"></span></a></li>
+                <li><a href="#" id="imgusa"><img class="flag" src="assets/img/usa.png"><span class="value"></span></a></li>
               </ul>
             </dd>
           </dl>
